# eqphases

./: .gitignore  Dockerfile  README.md  launch_container.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: munet.ipynb
seistools/models/: __init__.py  munet.py  seisbench.py
seistools/pipelines/: __init__.py  phase_picking.py
seistools/processing/: __init__.py  dataloaders.py  inference.py  ingestion.py  windowing.py
seistools/utils/: __init__.py  shared.py
seistools/weights/: Sorrento_FineTuneModel_best.h5
